Fix for Dark Mode visited Links

--- a/scss/dark.scss
+++ b/scss/dark.scss
@@ -20,7 +20,7 @@
         color: $linksdark;
         text-decoration: none;
         &:visited {
-            color: $secondarydark;
+            color: $linksvisited;
         }
     }
     // Navigation
